ARM Project/Templates/baseNSG.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "deploymentLocation": {
            "type": "string",
            "defaultValue": "North Europe"
        },
        "nsgName": {
            "type": "string",
            "defaultValue": "BasicLinux-NSG"
        }
    },
    "functions": [],
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[parameters('nsgName')]",
            "location": "[parameters('deploymentLocation')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow22",
                        "properties": {
                            "description": "Tillater SSH inn til VM-en",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 123,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow80",
                        "properties": {
                            "description": "Tilatter trafikk til og fra webserver",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 124,
                            "direction": "Inbound"

                        }
                    }
                ]
            } 
        }
    ],
    "outputs": {}
}
